--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,16 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<!-- Flyway -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<version>9.22.1</version>
 		</dependency>
 
 		<!-- SpringDoc OpenAPI (Swagger UI) -->
